# automatic-essay-evaluator

./: .buildinfo  .env.example  .flake8  .gitignore  Dockerfile  LICENSE  Makefile  README.md  contribute.html  genindex.html  index.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  usage.html  vocabulary_term_freq.ipynb  vocabulary_term_freq.py
.github/workflows/: cd.yaml  ci.yaml  docs.yaml  kaggle.yaml  snyk.yaml
_sources/: contribute.rst.txt  usage.rst.txt
_sources/autoapi/: index.rst.txt
autoapi/: index.html
autoapi/base_extractor/: index.html
autoapi/base_preprocessing/: index.html
autoapi/bert_pretrain_extractor/: index.html
autoapi/config/: index.html
autoapi/dataloader/: index.html
autoapi/losses/: index.html
autoapi/model/: index.html
autoapi/spellcheck_preprocessing/: index.html
autoapi/src/: index.html
autoapi/submission/: index.html
autoapi/submission_template/: index.html
autoapi/term_frequency_feature_extractor/: index.html
autoapi/test_term_frequency_feature_extractor/: index.html
demo/: app.py  utils.py
docs/source/: conf.py  (+2 more)
src/: bert_featurizer.py  bert_featurizer_solution.py  constant_predictor.py  cross_validate.py  cross_validation.py  data_reader.py  kaggle.ipynb  kernel-metadata.json  main.py  metrics.py  solution.py  spell_checker.py  submission.py  utils.py
tests/: test_constant_predictor.py  test_cross_validation.py  test_feature_extractor.py  test_handcrafted_text_feature_extractor.py  test_metric.py  test_reproducibility.py  test_text_cleaning.py
(+90 files in other folders)
